Fixed wtc-badge alignment

--- a/assets/css/3-sections/_about.sass
+++ b/assets/css/3-sections/_about.sass
@@ -101,6 +101,7 @@
 .badge-belt
   background:
       image: url(../img/wtc-badge.png)
+      position: center
       repeat: no-repeat, no-repeat
       size: 200px 200px, cover
   max-width: 620px
